# PEDWM_2025_2026_IoT_Dashboard

./: .gitignore  README.md  docker-compose.yml
.metals/: metals.lock.db
.metals/.reports/metals-full/2026-05-20/: r_empty-definition_09-52-16-357.md
Simulator/: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  docker-compose.yml  vcpkg.json
Simulator/files/: Sensors.json
Simulator/proto/: sparkplug_b.pb.cc  sparkplug_b.pb.h
Simulator/src/: config.cpp  config.hpp  main.cpp  node_simulator.cpp  node_simulator.hpp  sparkplug.cpp  sparkplug.hpp
backend/: .env.example  .gitignore  BACKEND_DOCUMENTATION.md  Dockerfile  build.sbt  docker-compose.yml
backend/project/: plugins.sbt
backend/src/main/protobuf/: sparkplug_b.proto
desempenho_individual/: issues.csv  main.ipynb
docs/: architeture.drawio  diagrama.drawio
docs/Relatorio_LaTeX/: main.aux  main.lof  main.lol  main.out  main.tex  main.toc
docs/Relatorio_LaTeX/seccoes/: Arquitetura_da_Solucao.aux  Arquitetura_da_Solucao.tex  Desempenho_Individual.aux  Desempenho_Individual.tex  Interface_Utilizador.aux  Interface_Utilizador.tex  Paradigmas_Implementacao.aux  Paradigmas_Implementacao.tex  Tecnologias_Utilizadas.aux  Tecnologias_Utilizadas.tex  introducao.aux  introducao.tex
docs/diagrams/: messages.puml
frontend/common/: pubspec.yaml
frontend/mobile/: .gitignore  mockup.excalidraw  pubspec.yaml
frontend/mobile/lib/: main.dart
frontend/mobile/test/: widget_test.dart
frontend/web/: dockerfile  pubspec.yaml
frontend/web/lib/: main.dart
(+65 files in other folders)
